--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,8 @@
       if (hash !== '') {
         var element = document.getElementById(hash)
         if (element) {
-          var scrollTop = window.pageYOffset || document.documentElement.scrollTop || document.body.scrollTop
-          var clientTop = document.documentElement.clientTop || document.body.clientTop || 0
+          let scrollTop = window.pageYOffset || document.documentElement.scrollTop || document.body.scrollTop
+          let clientTop = document.documentElement.clientTop || document.body.clientTop || 0
           var offset = element.getBoundingClientRect().top + scrollTop - clientTop
           // Wait for the browser to finish rendering before scrolling.
           setTimeout((function() {
@@ -48,7 +48,7 @@
         }
       }
     })
-  </script><link rel="alternate" type="application/rss+xml" href="/rss.xml"/><link rel="icon" href="/favicon-32x32.png?v=80a46a26b9ca6a441e521c2da635be9d" type="image/png"/><link rel="manifest" href="/manifest.webmanifest"/><meta name="theme-color" content="#0086F6"/><link rel="apple-touch-icon" sizes="48x48" href="/icons/icon-48x48.png?v=80a46a26b9ca6a441e521c2da635be9d"/><link rel="apple-touch-icon" sizes="72x72" href="/icons/icon-72x72.png?v=80a46a26b9ca6a441e521c2da635be9d"/><link rel="apple-touch-icon" sizes="96x96" href="/icons/icon-96x96.png?v=80a46a26b9ca6a441e521c2da635be9d"/><link rel="apple-touch-icon" sizes="144x144" href="/icons/icon-144x144.png?v=80a46a26b9ca6a441e521c2da635be9d"/><link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192x192.png?v=80a46a26b9ca6a441e521c2da635be9d"/><link rel="apple-touch-icon" sizes="256x256" href="/icons/icon-256x256.png?v=80a46a26b9ca6a441e521c2da635be9d"/><link rel="apple-touch-icon" sizes="384x384" href="/icons/icon-384x384.png?v=80a46a26b9ca6a441e521c2da635be9d"/><link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512x512.png?v=80a46a26b9ca6a441e521c2da635be9d"/><title data-react-helmet="true"></title><script src="/socket.io/socket.io.js"></script></head><body><script>
+  </script><link rel="alternate" type="application/rss+xml" href="/rss.xml"/><link rel="icon" href="/icons/icon-48x48.png?v=92b73c6642f62ad8e09dc03b1d055873"/><link rel="manifest" href="/manifest.webmanifest"/><meta name="theme-color" content="#0086F6"/><link rel="apple-touch-icon" sizes="48x48" href="/icons/icon-48x48.png?v=92b73c6642f62ad8e09dc03b1d055873"/><link rel="apple-touch-icon" sizes="72x72" href="/icons/icon-72x72.png?v=92b73c6642f62ad8e09dc03b1d055873"/><link rel="apple-touch-icon" sizes="96x96" href="/icons/icon-96x96.png?v=92b73c6642f62ad8e09dc03b1d055873"/><link rel="apple-touch-icon" sizes="144x144" href="/icons/icon-144x144.png?v=92b73c6642f62ad8e09dc03b1d055873"/><link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192x192.png?v=92b73c6642f62ad8e09dc03b1d055873"/><link rel="apple-touch-icon" sizes="256x256" href="/icons/icon-256x256.png?v=92b73c6642f62ad8e09dc03b1d055873"/><link rel="apple-touch-icon" sizes="384x384" href="/icons/icon-384x384.png?v=92b73c6642f62ad8e09dc03b1d055873"/><link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512x512.png?v=92b73c6642f62ad8e09dc03b1d055873"/><title data-react-helmet="true"></title><script src="/socket.io/socket.io.js"></script></head><body><script>
 void function() {
   window.__onThemeChange = function() {}
 
@@ -83,4 +83,4 @@ void function() {
 
   setTheme(preferredTheme || (darkQuery.matches ? 'dark' : 'light'))
 }()
-    </script><div id="___gatsby"></div><script src="/polyfill.js" nomodule=""></script><script src="/commons.js"></script></body></html>
+    </script><div id="___gatsby"></div><script src="/commons.js"></script></body></html>
